--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,9 +2,8 @@
 dependencies: []
 
 galaxy_info:
-  author: geerlingguy
+  author: aphexlog
   description: GitLab Git web interface
-  company: "Midwestern Mac, LLC"
   license: "license (BSD, MIT)"
   min_ansible_version: 2.0
   platforms:
