--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 dependencies: []
 
 galaxy_info:
+  role_name: gitlab
   author: aphexlog
   description: GitLab Git web interface
   license: "license (BSD, MIT)"
